--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
+# pip>=24.0
+# fastapi==0.111.0
+# uvicorn[standard]==0.30.1
+# openai==1.54.4
+# Pillow==10.3.0
+# python-dotenv==1.0.1
+# pydantic==2.7.4
 pip>=24.0
 fastapi==0.111.0
 uvicorn[standard]==0.30.1
+
 openai==1.54.4
+httpx==0.27.2
+
 Pillow==10.3.0
 python-dotenv==1.0.1
 pydantic==2.7.4
